objects/Colors__c.object
<CustomObject>
    <description>Test</description>
    <fields>
        <fullName>Number_of_Colors__c</fullName>
        <label>Number of Colors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Color__c</fullName>
        <label>Primary Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Blus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Color__c</fullName>
        <label>Secondary Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Purple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_were_these_colors_chosen__c</fullName>
        <externalId>true</externalId>
        <label>Why were these colors chosen?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Color</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Colors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>